--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require-dev": {
     "phpunit/phpunit": "^7.5"
   },
+  "minimum-stability": "dev",
   "authors": [
     {
       "name": "LIU SHIH YEN",
