--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
   "name": "botsnova/chatbase",
-  "description": "demo",
+  "description": "Botsnova for Chatbase is the PHP SDK for Chatbase analytics",
   "type": "library",
   "license": "Apache-2.0",
   "require": {
     "php": ">=5.3.0",
-    "guzzlehttp/guzzle": "^6.3",
-    "guzzlehttp/psr7": "^1.5",
-    "guzzlehttp/promises": "^1.3"
+    "guzzlehttp/promises": "^1.2",
+    "guzzlehttp/guzzle": "~6.0",
+    "guzzlehttp/psr7": "^1.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5"
+    "phpunit/phpunit": "^5.7"
   },
   "minimum-stability": "dev",
   "authors": [
