--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "require": {
     "php": ">=5.3.0",
-    "guzzlehttp/guzzle": "~6.0",
+    "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7"
